opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_jane"
bug-reports: "https://github.com/janestreet/ppx_jane/issues"
dev-repo: "git+https://github.com/janestreet/ppx_jane.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ppx_assert"
  "ppx_base"
  "ppx_bench"
  "ppx_bin_prot"
  "ppx_custom_printf"
  "ppx_expect"
  "ppx_fail"
  "ppx_fields_conv"
  "ppx_here"
  "ppx_inline_test"
  "ppx_let"
  "ppx_optcomp"
  "ppx_optional"
  "ppx_pipebang"
  "ppx_sexp_message"
  "ppx_sexp_value"
  "ppx_typerep_conv"
  "ppx_variants_conv"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.04.2" ]
descr: "
Standard Jane Street ppx rewriters

This package installs a ppx-jane executable, which is a ppx driver
including all standard Jane Street ppx rewriters.
"
