opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_jane"
bug-reports: "https://github.com/janestreet/ppx_jane/issues"
dev-repo: "git+https://github.com/janestreet/ppx_jane.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_jane/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.04.2"}
  "base_quickcheck"
  "ppx_assert"
  "ppx_base"
  "ppx_bench"
  "ppx_bin_prot"
  "ppx_custom_printf"
  "ppx_disable_unused_warnings"
  "ppx_expect"
  "ppx_fields_conv"
  "ppx_fixed_literal"
  "ppx_here"
  "ppx_inline_test"
  "ppx_let"
  "ppx_module_timer"
  "ppx_optcomp"
  "ppx_optional"
  "ppx_pipebang"
  "ppx_sexp_message"
  "ppx_sexp_value"
  "ppx_stable"
  "ppx_string"
  "ppx_typerep_conv"
  "ppx_variants_conv"
  "dune"                        {>= "2.0.0"}
  "ppxlib"                      {>= "0.15.0"}
]
synopsis: "Standard Jane Street ppx rewriters"
description: "
This package installs a ppx-jane executable, which is a ppx driver
including all standard Jane Street ppx rewriters.
"
