(library
 (name ppx_jane)
 (public_name ppx_jane)
 (kind ppx_rewriter)
 (libraries ppx_assert ppx_base ppx_bench ppx_bin_prot ppx_custom_printf
   ppx_disable_unused_warnings ppx_expect ppx_fields_conv ppx_fixed_literal
   ppx_here ppx_ignore_instrumentation ppx_inline_test ppx_let ppx_log
   ppx_module_timer ppx_optional ppx_pipebang base_quickcheck.ppx_quickcheck
   ppx_sexp_message ppx_sexp_value ppx_shorthand ppx_stable
   ppx_stable_witness ppx_string ppx_string_conv ppx_template ppx_tydi
   ppx_typed_fields ppx_typerep_conv ppx_var_name ppx_variants_conv)
 (preprocess no_preprocessing))
